--- a/app/src/main/res/layout/activity_newgame_list.xml
+++ b/app/src/main/res/layout/activity_newgame_list.xml
@@ -12,9 +12,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
         android:paddingTop="10dp"
+        android:paddingHorizontal="12dp"
         android:clipToPadding="false"/>
 
 </LinearLayout>
