--- a/app/src/main/res/layout/item_newgame.xml
+++ b/app/src/main/res/layout/item_newgame.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="115dp"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="12dp"
     android:elevation="0dp"
     android:foreground="@drawable/fg_ripple"
     app:cardBackgroundColor="@color/white"
@@ -23,7 +22,7 @@
 
             <ImageView
                 android:id="@+id/iv_cover"
-                android:layout_width="115dp"
+                android:layout_width="match_parent"
                 android:layout_height="115dp"
                 android:scaleType="centerCrop" />
 
