--- a/app/src/main/res/layout/view_home_okgame.xml
+++ b/app/src/main/res/layout/view_home_okgame.xml
@@ -23,7 +23,7 @@
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:paddingLeft="4dp"
-            android:text="@string/N704"
+            android:text="@string/P487"
             android:textColor="@color/color_313F56"
             android:textSize="16sp"
             android:textStyle="bold" />
