--- a/app/src/main/res/layout/activity_ambassador.xml
+++ b/app/src/main/res/layout/activity_ambassador.xml
@@ -57,6 +57,7 @@
                           android:textSize="@dimen/textSize16sp"
                           android:textColor="@color/color_0D2245"
                           android:textStyle="bold"
+                          android:textAllCaps="true"
                           android:text="@string/P488"/>
                       <TextView
                           android:id="@+id/tvInfo"
