UI走查问题修复

--- a/app/src/main/res/layout/view_home_hot_match.xml
+++ b/app/src/main/res/layout/view_home_hot_match.xml
@@ -22,10 +22,11 @@
             android:id="@+id/tvHotTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:layout_weight="1"
             android:paddingLeft="4dp"
             android:text="@string/N881"
+            android:fontFamily="@font/helvetica_bold"
             android:textColor="@color/color_313F56"
             android:textStyle="bold" />
 
