--- a/app/src/main/res/layout/view_home_win_rank.xml
+++ b/app/src/main/res/layout/view_home_win_rank.xml
@@ -18,8 +18,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/N707"
-            android:textColor="@color/color_313F56"
-            android:textSize="@dimen/textSize18sp"
+            android:fontFamily="@font/helvetica_bold"
+            android:textColor="@color/color_0D2245"
+            android:textSize="18sp"
             android:textStyle="bold" />
         <ImageView
             android:layout_width="wrap_content"
