UI走查问题修复

--- a/app/src/main/res/layout/view_home_hot_match.xml
+++ b/app/src/main/res/layout/view_home_hot_match.xml
@@ -27,7 +27,7 @@
             android:paddingLeft="4dp"
             android:text="@string/N881"
             android:fontFamily="@font/helvetica_bold"
-            android:textColor="@color/color_313F56"
+            android:textColor="@color/color_0D2245"
             android:textStyle="bold" />
 
 
