--- a/app/src/main/res/layout/view_home_recent.xml
+++ b/app/src/main/res/layout/view_home_recent.xml
@@ -17,7 +17,8 @@
         android:layout_marginBottom="@dimen/margin_8"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="@color/color_313F56"
+        android:fontFamily="@font/helvetica_bold"
+        android:textColor="@color/color_0D2245"
         android:text="@string/N874" />
 
     <androidx.recyclerview.widget.RecyclerView
