--- a/app/src/main/res/layout/fragment_reverify_rdentity_kyc.xml
+++ b/app/src/main/res/layout/fragment_reverify_rdentity_kyc.xml
@@ -25,6 +25,60 @@
             android:background="@color/white">
 
             <TextView
+                android:id="@+id/tvIdBack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:textColor="@color/color_BBBBBB_333333"
+                android:textSize="@dimen/textSize14sp"
+                android:text="@string/P491" />
+
+            <View
+                android:id="@+id/vIdBack"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/color_eeeeee"/>
+
+            <LinearLayout
+                android:id="@+id/llIdBack"
+                android:layout_width="195dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="25dp"
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal">
+
+                <ImageView
+                    android:id="@+id/ivIdBack"
+                    android:layout_width="match_parent"
+                    android:layout_height="120dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_icon_id01"
+                    android:background="@color/color_F0F5FA"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/ic_rectangle_268"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:text="@string/P198"
+                        android:textColor="@color/home_card_text_color"
+                        android:textSize="@dimen/textSize14sp" />
+
+                </LinearLayout>
+            </LinearLayout>
+
+
+            <TextView
                 android:id="@+id/tvSelf"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
